--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
            </div>
             <div class="col-4">
               <label for="inputAddress" class="form-label">Endereço</label>
-              <input type="text"  id="rua" placeholder="Joaquim Nabuco">
+              <input type="text"  id="rua" placeholder="Insira seu Endereço">
             </div>
             <div class="col-4">
               <label for="inputAddress" class="form-label">Numero</label>
@@ -63,15 +63,15 @@
             </div>
             <div class="col-4">
               <label for="inputAddress2" class="form-label">Bairro</label>
-              <input type="text"  id="bairro" >
+              <input type="text"  id="bairro" placeholder="Insira seu Bairro" >
             </div>
             <div class="col-md-4">
               <label for="inputCity" class="form-label">Cidade</label>
-              <input type="text"  id="cidade">
+              <input type="text"  id="cidade" placeholder="Insira sua Cidade">
             </div>
             <div class="col-md-4">
               <label for="inputState" class="form-label">Estado</label>
-              <input id="estado" >
+              <input id="estado" placeholder="Insira seu Estado">
                 
             </div>
             <div class="col-">
